Fixed overflow on viewAdminGrant screen

--- a/Frontend/src/pages/viewAdminGrant/viewAdminGrant.module.css
+++ b/Frontend/src/pages/viewAdminGrant/viewAdminGrant.module.css
@@ -15,6 +15,11 @@
     grid-auto-flow: column;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border-radius: var(--padding-1);
+    max-width: 100%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+
 }
 
 .buttonContainer{
